# whisper_flow_clone_local

./: .gitignore  ARCHITECTURE.md  CODEBASE_ANALYSIS.md  Dockerfile  FINAL_REPORT.md  GAP_ANALYSIS.md  PROGRESS.md  PROJECT_CONTEXT.md  PROMPT_FOR_ANTIGRAVITY (1).md  README.md  RESEARCH.md  SESSION_HANDOFF_2026-07-03.md  SESSION_HANDOFF_3.md  WISPR_FLOW_COMPARISON.md  _download_helper.ps1  config.example.json  config.example.toml  config.llama4.toml  config.medium.toml  download_models.bat  install_cuda_whisper.bat  pyinstaller.spec  pyproject.toml  requirements.txt  setup.bat  start.bat  start.ps1  start_medium.bat
demo/: README.md
docs/: FAQ.md  MOBILE_IMPLEMENTATION_PLAN.md  PERFORMANCE.md  TROUBLESHOOTING.md
mobile/android/: settings.gradle.kts
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
mobile/ios/WhisperFlowShared/: DictationManager.swift  PromptsEngine.swift
mobile/shared/: prompts.json
qa_artifacts/: invalid.toml  llama-server-8081.err  llama-server-gemma-8081.err  server.out  whisperflow-8090.err  whisperflow-gemma-8090.err  whisperflow-gemma-8090.out
scripts/: build.sh  download_models.sh  setup.sh
second-brain/: .env  .env.example  .gitignore  README.md  SECOND_BRAIN_BUILD_PLAN.md  SECOND_BRAIN_UNDERSTANDING.md  next.config.ts  package.json
second-brain/prisma/: schema.prisma
second-brain/scripts/: watch-sb.sh  watcher.sh
second-brain/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
second-brain/src-tauri/binaries/: whisper-sidecar.py
second-brain/src-tauri/capabilities/: default.json
second-brain/src-tauri/src/: lib.rs  main.rs
second-brain/src/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
second-brain/src/app/api/brain/ask/: route.ts
second-brain/src/app/api/brain/backfill/: route.ts
second-brain/src/app/api/brain/capture/: route.ts
second-brain/src/app/api/brain/dictation/: route.ts
second-brain/src/app/api/brain/export/: route.ts
second-brain/src/app/api/brain/inbox/: route.ts
second-brain/src/app/api/brain/notes/: route.ts
second-brain/src/app/api/brain/search/: route.ts
second-brain/src/app/api/brain/tasks/: route.ts
second-brain/src/app/api/polish/: route.ts
second-brain/src/app/api/status/: route.ts
second-brain/src/app/api/transcribe/: route.ts
second-brain/src/app/capture/: page.tsx
second-brain/src/lib/: api.ts  dates.ts  db.ts  embeddings.ts  env.ts  intent.ts  llm.ts  matching.ts  vault.ts
tests/: __init__.py  conftest.py  e2e_test_report.json  test_audio.py  test_benchmark.py  test_config.py  test_e2e_pipeline.py  test_errors.py  test_formatting.py  test_formatting_phase1.py  test_formatting_pipeline.py  test_models.py  test_parsers.py  test_pipeline.py  test_regression.py  test_wispr_flow.py
training/: README.md  export_onnx.py  prepare_data.py  sft_train.py
whisper_flow/: __init__.py  __main__.py  app_detect.py  audio.py  audio_preprocess.py  benchmark.py  cli.py  config.py  daemon.py  errors.py  formatting.py  history.py  hotkeys.py  inserter.py  intents.py  models.py  notifier.py  overlay.py  pipeline.py  prompts.py  server.py  snippets.py  transforms.py  tray.py  vocabulary.py
whisper_flow/backends/: __init__.py  base.py  llama_cpp.py  moonshine.py  qwen3_asr.py  whisper_cpp.py
(+8 files in other folders)
